--- a/.env.example
+++ b/.env.example
@@ -16,6 +16,9 @@ DB_PASSWORD=
 
 MOLLIE_KEY=
 
+MAILCHIMP_APIKEY=YOUR_MAILCHIMP_API_KEY
+MAILCHIMP_LIST_ID=YOUR_MAILCHIMP_LIST_ID
+
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 FILESYSTEM_DRIVER=local
